<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY appname "Tada Shop">
    ]>

<resources>
    <string name="app_name">&appname;</string>
    <string name="RegistrationActivity_needs_access_to_your_contacts_and_media_in_order_to_connect_with_friends">&appname; needs access to your contacts and media in order to connect with friends, exchange messages, and make secure calls</string>
    <string name="RegistrationActivity_needs_access_to_your_contacts_in_order_to_connect_with_friends">&appname; needs access to your contacts in order to connect with friends, exchange messages, and make secure calls</string>
    <string name="action_settings">Settings</string>
    <string name="hint_enter_a_message">Type a message…</string>

    <string name="menu_home">Home</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_slideshow">Channels</string>
    <string name="menu_chats">Chats</string>
    <string name="menu_deposits">Calls</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_new_account">New Account</string>
    <string name="default_notification_channel_id">3</string>
    <string name="msg_token_fmt" formatted="true"> %s</string>

    <string-array name="view_types_dialog">
        <item name="image">Image (default)</item>
        <item name="voice">Voice message (custom)</item>
    </string-array>



    <string name="loading">loading…please wait</string>
    <string name="loading_short">Loading…</string>
    <string name="we_will_send_a_confirmation_code_to_your_phone">You will receive a verification code. Carrier rate may apply.</string>
    <string name="carrier_rate">Carrier rate may apply.</string>
    <string name="next">Next</string>
    <string name="_233">+233</string>
    <string name="phone_number">Phone Number</string>
    <string name="country">Country</string>
    <string name="_244300000">Phone number</string>
    <string name="enter_your_phone">Enter your phone number to get started</string>
    <string name="invalid_phone_number">Phone number must be 10 characters.</string>
    <string name="invalid_password">Password must be greater than 6 characters</string>
    <string name="invalid_title">Title is required</string>
    <string name="invalid_title_length">Title must not be more than 200 characters</string>
    <string name="invalid_name">Name field is required</string>
    <string name="invalid_name_length">Name must not be more than 40 characters</string>
    <string name="invalid_description">Description field is required</string>
    <string name="invalid_link">mp3 file Link is required </string>
    <string name="invalid_size">audio size must be less than 50MB </string>
    <string name="invalid_image">Image is required </string>
    <string name="invalid_speaker">Speak must be selected </string>
    <string name="invalid_language">Language must be selected </string>
    <string name="login_failed">Something went wrong</string>
    <string name="invalid_format">Phone number format is invalid</string>
    <string name="enter_your_confirmation_code">Enter your confirmation code</string>
    <string name="we_sent_a_6_digit_code_to">We sent a 6-digit code to</string>
    <string name="request_a_new_code">Request a new code</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="you_are_creating_an_account_for">You are creating an account for \t </string>
    <string name="setup_profile">Set up your profile</string>
    <string name="log_in">LOG IN</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome back \t</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="exit">Exit</string>
    <string name="menu_log_out">Log out</string>
    <string name="logout">Log out</string>
    <string name="user_first_name">First name</string>
    <string name="user_last_name">Last name (optional)</string>
    <string name="start_chat">start chat</string>


    <string name="RegistrationActivity_take_privacy_with_you_be_yourself_in_every_message">Take privacy with you.\nBe yourself in every message.</string>
    <string name="RegistrationActivity_terms_and_privacy">Terms &amp; Privacy Policy</string>
    <string name="registration_activity__transfer_or_restore_account">Transfer or restore account</string>

    <string name="RegistrationActivity_select_your_country">Select your country</string>
    <string name="country_selection_fragment__search">Search</string>
    <string name="country_selection_fragment__loading_countries">Loading countries…</string>
    <string name="country_selection_fragment__no_matching_countries">No matching countries</string>
    <string name="RegistrationActivity_you_must_specify_your_country_code">You must specify your country code</string>
    <string name="RegistrationActivity_you_must_specify_your_phone_number">You must specify your phone number</string>
    <string name="RegistrationActivity_invalid_number">Invalid number</string>
    <string name="RegistrationActivity_the_number_you_specified_s_is_invalid">The number you specified is invalid</string>
    <string name="RegistrationActivity_a_verification_code_will_be_sent_to">A verification code will be sent to</string>
    <string name="RegistrationActivity_edit_number">Edit number</string>
    <string name="RegistrationActivity_is_your_phone_number_above_correct">Is your phone number above correct?</string>
    <string name="Permissions_permission_required">Permission required</string>
    <string name="Permissions_continue">Continue</string>
    <string name="Permissions_not_now">Not now</string>
    <string name="contact_selection_activity__new_group">New group</string>
    <string name="group_name">Account Name</string>
    <string name="create_group">Create Account</string>
    <string name="please_provide_a_group_name_and_optional_group_icon">Please provide a account name and optional account icon</string>
    <string name="at_least_1_contact_must_be_selected">At least 1 contact must be selected</string>
    <string name="menu_select_contact">Select contact</string>
    <string name="add_participant">Add participants</string>
    <string name="add_subject">add Subject</string>
    <string name="__participants" formatted="true">Participants: %s</string>
    <string name="__of_500_selected" formatted="true">%s of 500 selected</string>
    <string name="provide_group_subject">Provide group subject and optional group icon</string>
<!--    <string name="last_seen" formatted="true">last seen %s %s at %s </string>-->
    <string name="last_seen">last seen %1$s at %2$s</string>
    <string name="last_seen_date">last seen %1$s</string>
    <string name="is_typing" >%s is typing…</string>
    <string name="price" >¢%s</string>
    <string name="profit" >"You've added ¢%s profit</string>
    <string name="retry">retry</string>
    <string name="category_image">category image</string>
    <string name="product_image">product image</string>
    <string name="view_cart">View cart</string>
    <string name="switch_pages">switch pages</string>
    <string name="share_product">Share product</string>
    <string name="detail_share_product">SHARE PRODUCT</string>
    <string name="check_out">CHECK OUT</string>
    <string name="add_to_cart_button">add to cart button</string>
    <string name="product_title">product title</string>
    <string name="share_with_friends_to_earn_more">Share with friends to earn more</string>
    <string name="add_profit">Add profit</string>
    <string name="total_price">Total price</string>
    <string name="my_profit">My profit</string>
    <string name="item_s_1">Item/s (1)</string>
    <string name="share">SHARE</string>
    <string name="no_item_in_the_cart">No item in the cart</string>
    <string name="minus_btn_desc">"decrease cart "</string>
    <string name="plus_btn_desc">increase cart</string>
    <string name="card_divider">card divider</string>
    <string name="price_card_items_string">items(%s)</string>
    <string name="menu">Cart</string>
    <string name="welcome_intro">Start your online business without investing any capital</string>
    <string name="create_an_account">Create an account</string>
    <string name="please_enter_your_details_below_to_create_an_account">Please enter your details below to create an account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="your_email">Your Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="already_have_an_account_sign_up">Already have an account? Sign up</string>
    <string name="sign_in_text">Please enter your phone number to sign in to your account.</string>
    <string name="invalid_email">Invalid email</string>
    <string name="required">%s field is required</string>
    <string name="phone_required">Invalid email</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="menu_feed">Feed</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_account">Account</string>
    <string name="menu_orders">Orders</string>
    <string name="shopping_cart_icon">shopping cart icon</string>
    <string name="delete_cart_item">Delete cart item</string>
    <string name="all_products">All products</string>
    <string name="description">DESCRIPTION</string>


</resources>
