<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >


    <LinearLayout
        android:padding="20dp"
        android:id="@+id/form_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true" >


        <TextView
            android:text="@string/setup_profile"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtUserNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_first_name">
            <requestFocus/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtUserName"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtUserLastNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_last_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtUserLastName"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:text="@string/next"
        android:layout_alignParentBottom="true"
        android:textStyle="bold"
        style="AppTheme.Button.Inverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>
