<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/freedom_justice"
    android:padding="25dp"
    android:fitsSystemWindows="true"
    tools:context=".auth.VerifyPhoneFragment">

    <TextView
        android:id="@+id/txtvPhoneDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="36dp"
        android:text="@string/enter_your_phone"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtvInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:text="@string/we_will_send_a_confirmation_code_to_your_phone"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtvPhoneDescription"
        app:layout_constraintTop_toBottomOf="@+id/txtvPhoneDescription" />

    <Spinner
        android:id="@+id/countrySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:padding="16dp"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtvPhoneDescription"
        app:layout_constraintTop_toBottomOf="@+id/txtvInformation"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txLayoutCode"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/country"
        app:layout_constraintStart_toStartOf="@+id/countrySpinner"
        app:layout_constraintTop_toBottomOf="@+id/countrySpinner"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/countryCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_phone_black_24dp"
            android:drawablePadding="10dp"
            android:enabled="false"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:text="@string/_233"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtvNumberLayout"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:drawablePadding="10dp"
        android:hint="@string/phone_number"
        app:layout_constraintBottom_toBottomOf="@+id/txLayoutCode"
        app:layout_constraintStart_toEndOf="@+id/txLayoutCode">

        <!--//remove autfocus-->
        <requestFocus />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_number"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxLength="15" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="AppTheme.Button.Inverse"
        android:text="@string/next"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
